16363
An Illegal inheritance error is thrown by the compiler trying to inherit java classes/ interfaces in the following way:

{code:title=Java|borderStyle=solid}

interface A<T>{}

interface B<T> extends A<T>{}

interface C extends A{}

class D implements B,C {
	public D(){};
}
```scala

Trying to subclass D in scala:

{code:title=Scala|borderStyle=solid}

scala> class Foo extends D
<console>:7: error: illegal inheritance;
 class Foo inherits different type instances of trait A:
A[T] and A[T]
       class Foo extends D
             ^
```

The problem appeared when trying to subclass org.apache.commons.buffer.PriorityBuffer, so there are real life situations where this leads to scala<->java interop problems.

http://commons.apache.org/collections/apidocs/org/apache/commons/collections/buffer/PriorityBuffer.html

